Enhanced exception message handling in data.engine.odaconsumer